Updating clarity logic for non-trios

--- a/nbs_genes/nbs_genes_clarity.ipynb
+++ b/nbs_genes/nbs_genes_clarity.ipynb
@@ -64,7 +64,18 @@
       "## family id ##\n",
       "###############\n",
       "# uncomment for list \n",
-      "sample_list = '08-01_PG0001705-BLD','08-04_PG0001704-BLD','08-05_PG0001706-BLD','05-02_PG0003573-BLD','05-03_PG0003565-BLD','05-01_PG0003524-BLD','07-02_PG0001692-BLD','07-03_PG0001693-BLD','07-01_PG0002918-DNA', '06-02_PG0001697-BLD','06-03_PG0001698-BLD','06-01_PG0001696-BLD'\n",
+      "# sample_list = '08-01_PG0001705-BLD','08-04_PG0001704-BLD','08-05_PG0001706-BLD',\\\n",
+      "#               '05-02_PG0003573-BLD','05-03_PG0003565-BLD','05-01_PG0003524-BLD',\\\n",
+      "#               '07-02_PG0001692-BLD','07-03_PG0001693-BLD','07-01_PG0002918-DNA', \\\n",
+      "#               '06-02_PG0001697-BLD','06-03_PG0001698-BLD','06-01_PG0001696-BLD'\n",
+      "\n",
+      "sample_list = {'08-01_PG0001705-BLD':'08', '08-04_PG0001704-BLD':'08', '08-05_PG0001706-BLD':'08',\n",
+      "               '05-02_PG0003573-BLD':'05', '05-03_PG0003565-BLD':'05', '05-01_PG0003524-BLD':'05',\n",
+      "               '07-02_PG0001692-BLD':'07', '07-03_PG0001693-BLD':'07', '07-01_PG0002918-DNA':'07',\n",
+      "               '06-02_PG0001697-BLD':'06', '06-03_PG0001698-BLD':'06', '06-01_PG0001696-BLD':'06',\n",
+      "               '07-02_PG0001692-BLD':'07b', '07-03_PG0001693-BLD':'07b', '07-05_PG0002918-DNA':'07b',\n",
+      "               '04-01_PG0001691-BLD':'04', '08-01_PG0001705-BLD':'08'\n",
+      "               }\n",
       "\n",
       "####################\n",
       "## trio member(s) ##\n",
@@ -95,13 +106,13 @@
       "## system info ##\n",
       "#################\n",
       "# enter path to snpEff.jar on your computer\n",
-      "snpeff_path = '/Users/selasady/tools/snpEff/snpEff.jar'\n",
-      "\n",
+      "#snpeff_path = '/Users/selasady/tools/snpEff/snpEff.jar'\n",
+      "snpeff_path = 'D:/Documents/tools/snpEff/snpEff.jar'\n",
       "# enter desired basename for output files\n",
-      "out_name = 'clarity_nbs_genes'"
+      "out_name = 'clarity_nbs'"
      ],
      "language": "python",
-     "prompt_number": 8
+     "prompt_number": 49
     },
     {
      "cell_type": "heading",
@@ -172,6 +183,7 @@
      "input": [
       "# format trio argument\n",
       "member_list = []\n",
+      "# format arg for which trio members to include\n",
       "for member in trio_member:\n",
       "    if member == 'NB':\n",
       "        member_list.append(\"bv.sample_id LIKE '%03'\")\n",
@@ -185,13 +197,14 @@
       "# if the member argument is not empty create statement\n",
       "if len(member_list) > 0:\n",
       "    member_arg = 'AND (' + ' OR '.join(member_list) + ')'\n",
-      "# otherwise statment is empty\n",
+      "# otherwise statement is empty\n",
       "else: member_arg = ''\n",
       "\n",
-      "# format sample id argument\n",
+      "# format arg for sample ids to include\n",
       "sample_arg = []\n",
+      "\n",
       "if sample_list != 'all':\n",
-      "    sample_arg.append(\"AND bv.sample_id IN \" + str(sample_list))\n",
+      "    sample_arg.append(\"AND bv.sample_id IN ('{}')\".format( \"', '\".join(sample_list.keys()))) \n",
       "    subject_list = \", \".join(str(i) for i in sample_arg)\n",
       "else: \n",
       "    subject_list = ''\n",
@@ -207,7 +220,7 @@
       "    subject_statement = ''"
      ],
      "language": "python",
-     "prompt_number": 9
+     "prompt_number": 68
     },
     {
      "cell_type": "code",
@@ -215,15 +228,37 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      "# connect to impala\n",
+      "# load modules to connect to impala\n",
       "from impala.dbapi import connect\n",
-      "from impala.util import as_pandas\n",
-      "\n",
-      "# to connect to specific database, use the database argument\n",
-      "conn=connect(host='glados19', port=21050)"
+      "from impala.util import as_pandas"
      ],
      "language": "python",
-     "prompt_number": 15
+     "prompt_number": 69
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "# open connection, run query, close connection \n",
+      "def run_query(query_name, remove_name):\n",
+      "    # create connection object\n",
+      "    conn=connect(host='glados19', port=21050, timeout=120)\n",
+      "    # drop table if it exists\n",
+      "    cur = conn.cursor()\n",
+      "    print 'Removing table if it already exists...'\n",
+      "    cur.execute('DROP TABLE IF EXISTS {}.{}_{}'.format(out_db,out_name, remove_name))\n",
+      "    # run query \n",
+      "    print 'Running the following query on impala: \\n' + query_name\n",
+      "    cur.execute(query_name)\n",
+      "    print 'Query finished. Please note that the 1/2 genotype was converted to 0/1 for downstream compatibility with ' \\\n",
+      "          'snpeff, and only used for determining compound heterozygosity. \\n Closing connection.'\n",
+      "    cur.close()\n",
+      "    conn.close()"
+     ],
+     "language": "python",
+     "prompt_number": 70
     },
     {
      "cell_type": "code",
@@ -234,14 +269,14 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Checking if table name already exists...\nRunning the following query on impala: \n\n\n    CREATE TABLE users_selasady.nbs_kaviar AS         \n          WITH bv as (\n             SELECT bv.sample_id, bv.chrom, bv.pos, bv.id, bv.ref, \n                  bv.alt, bv.qual, bv.filter, regexp_replace(gt, '1/2', '0/1') as geno, k.allele_freq,  \n                  CASE WHEN (k.allele_freq < .03 OR k.allele_freq IS NULL )then 'Y'\n                  ELSE 'N'\n                  END as kaviar_rare\n             FROM clarity2.wgs_illumina_variant bv\n             LEFT JOIN /* +SHUFFLE */ p7_ref_grch37.kaviar k\n                  ON bv.chrom = k.chrom\n                  AND bv.pos = k.pos\n                  AND bv.ref = k.ref\n                  AND bv.alt = k.alt\n            WHERE (bv.chrom <> 'X' AND bv.chrom <> 'Y')\n            AND bv.sample_id IN ('08-01_PG0001705-BLD', '08-04_PG0001704-BLD', '08-05_PG0001706-BLD', '05-02_PG0003573-BLD', '05-03_PG0003565-BLD', '05-01_PG0003524-BLD', '07-02_PG0001692-BLD', '07-03_PG0001693-BLD', '07-01_PG0002918-DNA', '06-02_PG0001697-BLD', '06-03_PG0001698-BLD', '06-01_PG0001696-BLD') \n         )\n        SELECT DISTINCT bv.*, nbs.gene, nbs.entrez_gene_id, nbs.condition, nbs.mrna,\n            nbs.omim_phenotype, nbs.va_name, nbs.inheritance, nbs.allelic_condition,nbs.in_pgb, \n            nbs.level, nbs.comments          \n       FROM bv, users_selasady.nbs_ucsc nbs\n       WHERE bv.chrom = nbs.chrom\n       AND bv.pos BETWEEN nbs.txstart and nbs.txend\n       "
+        "Removing table if it already exists...\nRunning the following query on impala: \n\n\n    CREATE TABLE users_selasady.clarity_nbs_kaviar AS         \n          WITH bv as (\n             SELECT bv.sample_id, bv.chrom, bv.pos, bv.id, bv.ref, \n                  bv.alt, bv.qual, bv.filter, regexp_replace(gt, '1/2', '0/1') as geno, k.allele_freq,  \n                  CASE WHEN (k.allele_freq < .03 OR k.allele_freq IS NULL )then 'Y'\n                  ELSE 'N'\n                  END as kaviar_rare\n             FROM clarity2.wgs_illumina_variant bv\n             LEFT JOIN /* +SHUFFLE */ p7_ref_grch37.kaviar k\n                  ON bv.chrom = k.chrom\n                  AND bv.pos = k.pos\n                  AND bv.ref = k.ref\n                  AND bv.alt = k.alt\n            WHERE (bv.chrom <> 'X' AND bv.chrom <> 'Y')\n            AND bv.sample_id IN ('05-02_PG0003573-BLD', '07-02_PG0001692-BLD', '05-03_PG0003565-BLD', '06-02_PG0001697-BLD', '07-03_PG0001693-BLD', '04-01_PG0001691-BLD', '08-05_PG0001706-BLD', '06-01_PG0001696-BLD', '07-05_PG0002918-DNA', '05-01_PG0003524-BLD', '06-03_PG0001698-BLD', '07-01_PG0002918-DNA', '08-04_PG0001704-BLD', '08-01_PG0001705-BLD') \n         )\n        SELECT DISTINCT bv.*, nbs.gene, nbs.entrez_gene_id, nbs.condition, nbs.mrna,\n            nbs.omim_phenotype, nbs.va_name, nbs.inheritance, nbs.allelic_condition,nbs.in_pgb, \n            nbs.level, nbs.comments          \n       FROM bv, users_selasady.nbs_ucsc nbs\n       WHERE bv.chrom = nbs.chrom\n       AND bv.pos BETWEEN nbs.txstart and nbs.txend\n       "
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\nQuery finished. Please note that the 1/2 genotype was converted to 0/1 for downstream compatibility. \n Closing connection."
+        "\nQuery finished. Please note that the 1/2 genotype was converted to 0/1 for downstream compatibility with snpeff, and only used for determining compound heterozygosity. \n Closing connection."
        ]
       },
       {
@@ -256,7 +291,7 @@
       "# create kaviar query\n",
       "kaviar_query = '''\n",
       "\n",
-      "    CREATE TABLE {}.nbs_kaviar AS         \n",
+      "    CREATE TABLE {}.{}_kaviar AS         \n",
       "          WITH bv as (\n",
       "             SELECT bv.sample_id, bv.chrom, bv.pos, bv.id, bv.ref, \n",
       "                  bv.alt, bv.qual, bv.filter, regexp_replace(gt, '1/2', '0/1') as geno, k.allele_freq,  \n",
@@ -278,27 +313,13 @@
       "       FROM bv, {}.nbs_ucsc nbs\n",
       "       WHERE bv.chrom = nbs.chrom\n",
       "       AND bv.pos BETWEEN nbs.txstart and nbs.txend\n",
-      "       '''.format(out_db, kav_freq, variant_table, kaviar_table, subject_statement, out_db)\n",
-      "\n",
-      "# open connection, run query, close connection \n",
-      "def run_query(query_name, db_name):\n",
-      "    # drop table if it exists\n",
-      "    cur = conn.cursor()\n",
-      "    print 'Checking if table name already exists...'\n",
-      "    cur.execute('DROP TABLE IF EXISTS {}.{}'.format(out_db,db_name))\n",
-      "    cur.close()\n",
-      "    # run query \n",
-      "    print 'Running the following query on impala: \\n' + query_name\n",
-      "    cur = conn.cursor()\n",
-      "    cur.execute(query_name)\n",
-      "    print 'Query finished. Please note that the 1/2 genotype was converted to 0/1 for downstream compatibility. \\n Closing connection.'\n",
-      "    cur.close()\n",
+      "       '''.format(out_db, out_name, kav_freq, variant_table, kaviar_table, subject_statement, out_db)\n",
       "\n",
       "# run kaviar annotation query\n",
-      "run_query(kaviar_query, 'nbs_kaviar')"
+      "run_query(kaviar_query, 'kaviar')"
      ],
      "language": "python",
-     "prompt_number": 16
+     "prompt_number": 71
     },
     {
      "cell_type": "heading",
@@ -326,7 +347,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Running the following query on impala: \n\n        CREATE TABLE IF NOT EXISTS users_selasady.nbs_annotated AS \n        WITH nbs as (\n             SELECT DISTINCT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn,\n                 CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2$'  \n                     AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n                     ELSE 'N'\n                 END AS clin_patho\n             FROM users_selasady.nbs_kaviar nbs\n             LEFT JOIN p7_ref_grch37.clinvar clin\n                 ON nbs.chrom = clin.chrom\n                 AND nbs.pos = clin.pos\n                 AND nbs.alt = clin.alt\n          )\n\n        SELECT DISTINCT nbs.*, db.aa_alt, db.sift_score, db.sift_pred, db.polyphen2_hdiv_score,\n            db.polyphen2_hdiv_pred, db.polyphen2_hvar_score, db.polyphen2_hvar_pred, \n            db.fathmm_score, db.fathmm_pred, db.cadd_raw, db.dann_score, db.mutation_taster_pred,\n            db.mutation_assessor_score, mutation_assessor_pred, db.provean_score, db.provean_pred,\n            db.clinvar_clnsig, db.interpro_domain, db.exac_af,\n            CASE\n                WHEN nbs.sample_id = '08-01_PG0001705-BLD' THEN 'M'\n                WHEN nbs.sample_id = '08-04_PG0001704-BLD' THEN 'F'\n                WHEN nbs.sample_id = '08-05_PG0001706-BLD' THEN 'NB'\n                WHEN nbs.sample_id = '05-02_PG0003573-BLD' THEN 'M'\n                WHEN nbs.sample_id = '05-03_PG0003565-BLD' THEN 'F'\n                WHEN nbs.sample_id = '05-01_PG0003524-BLD' THEN 'NB'\n                WHEN nbs.sample_id = '07-02_PG0001692-BLD' THEN 'M'\n                WHEN nbs.sample_id = '07-03_PG0001693-BLD' THEN 'F'\n                WHEN nbs.sample_id = '07-01_PG0002918-DNA' THEN 'NB'\n                WHEN nbs.sample_id = '07-05_PG0002918-DNA' THEN 'NB2'\n                WHEN nbs.sample_id = '06-02_PG0001697-BLD' THEN 'M'\n                WHEN nbs.sample_id = '06-03_PG0001698-BLD' THEN 'F'\n                WHEN nbs.sample_id = '06-01_PG0001696-BLD' THEN 'NB'\n                END as member,\n             CASE\n                WHEN (db.sift_pred LIKE '%D%' or db.polyphen2_hdiv_pred LIKE '%D%' or db.mutation_taster_pred LIKE '%D%'\n                     or db.mutation_assessor_pred LIKE '%H%' or db.fathmm_pred LIKE '%D%' or db.provean_pred LIKE '%D%') THEN 'Y'\n                ELSE 'N'\n                END as dbnfsp_predicted,\n            SUBSTRING(nbs.sample_id, 1,2) as family_id,\n            CONCAT(nbs.chrom, ':', CAST(nbs.pos AS STRING), ':', nbs.ref, ':', nbs.alt) as var_id \n        FROM nbs, p7_ref_grch37.dbnsfp_variant db\n            WHERE nbs.chrom = db.chrom\n            AND nbs.pos = db.pos\n            AND nbs.alt = db.alt\n            \nQuery finished. Please note that the 1/2 genotype was converted to 0/1 for downstream compatibility. \n Closing connection."
+        "Removing table if it already exists...\nRunning the following query on impala: \n\n        CREATE TABLE users_selasady.clarity_nbs_annotated AS \n        WITH nbs as (\n             SELECT DISTINCT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn,\n                 CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2$'  \n                     AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n                     ELSE 'N'\n                 END AS clin_patho\n             FROM users_selasady.clarity_nbs_kaviar nbs\n             LEFT JOIN p7_ref_grch37.clinvar clin\n                 ON nbs.chrom = clin.chrom\n                 AND nbs.pos = clin.pos\n                 AND nbs.alt = clin.alt\n          )\n\n        SELECT DISTINCT nbs.*, db.aa_alt, db.sift_score, db.sift_pred, db.polyphen2_hdiv_score,\n            db.polyphen2_hdiv_pred, db.polyphen2_hvar_score, db.polyphen2_hvar_pred, \n            db.fathmm_score, db.fathmm_pred, db.cadd_raw, db.dann_score, db.mutation_taster_pred,\n            db.mutation_assessor_score, mutation_assessor_pred, db.provean_score, db.provean_pred,\n            db.clinvar_clnsig, db.interpro_domain, db.exac_af,\n            CASE\n                WHEN nbs.sample_id = '08-01_PG0001705-BLD' THEN 'M'\n                WHEN nbs.sample_id = '08-04_PG0001704-BLD' THEN 'F'\n                WHEN nbs.sample_id = '08-05_PG0001706-BLD' THEN 'NB'\n                WHEN nbs.sample_id = '05-02_PG0003573-BLD' THEN 'M'\n                WHEN nbs.sample_id = '05-03_PG0003565-BLD' THEN 'F'\n                WHEN nbs.sample_id = '05-01_PG0003524-BLD' THEN 'NB'\n                WHEN nbs.sample_id = '07-02_PG0001692-BLD' THEN 'M'\n                WHEN nbs.sample_id = '07-03_PG0001693-BLD' THEN 'F'\n                WHEN nbs.sample_id = '07-01_PG0002918-DNA' THEN 'NB'\n                WHEN nbs.sample_id = '06-02_PG0001697-BLD' THEN 'M'\n                WHEN nbs.sample_id = '06-03_PG0001698-BLD' THEN 'F'\n                WHEN nbs.sample_id = '06-01_PG0001696-BLD' THEN 'NB'\n                WHEN nbs.sample_id = '07-05_PG0002918-DNA' THEN 'NB'\n                WHEN nbs.sample_id = '04-01_PG0001691-BLD' THEN 'NB'\n                WHEN nbs.sample_id = '08-01_PG0001705-BLD' THEN 'NB'\n                END as member,\n             CASE\n                WHEN (db.sift_pred LIKE '%D%' or db.polyphen2_hdiv_pred LIKE '%D%' or db.mutation_taster_pred LIKE '%D%'\n                     or db.mutation_assessor_pred LIKE '%H%' or db.fathmm_pred LIKE '%D%' or db.provean_pred LIKE '%D%') THEN 'Y'\n                ELSE 'N'\n                END as dbnfsp_predicted,\n            CONCAT(nbs.chrom, ':', CAST(nbs.pos AS STRING), ':', nbs.ref, ':', nbs.alt) as var_id \n        FROM nbs, p7_ref_grch37.dbnsfp_variant db\n            WHERE nbs.chrom = db.chrom\n            AND nbs.pos = db.pos\n            AND nbs.alt = db.alt\n            \nQuery finished. Please note that the 1/2 genotype was converted to 0/1 for downstream compatibility with snpeff, and only used for determining compound heterozygosity. \n Closing connection."
        ]
       },
       {
@@ -339,14 +360,14 @@
      ],
      "input": [
       "dbnsfp_query = '''\n",
-      "        CREATE TABLE IF NOT EXISTS {}.nbs_annotated AS \n",
+      "        CREATE TABLE {}.{}_annotated AS \n",
       "        WITH nbs as (\n",
       "             SELECT DISTINCT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn,\n",
       "                 CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2$'  \n",
       "                     AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n",
       "                     ELSE 'N'\n",
       "                 END AS clin_patho\n",
-      "             FROM {}.nbs_kaviar nbs\n",
+      "             FROM {}.{}_kaviar nbs\n",
       "             LEFT JOIN {} clin\n",
       "                 ON nbs.chrom = clin.chrom\n",
       "                 AND nbs.pos = clin.pos\n",
@@ -371,25 +392,27 @@
       "                WHEN nbs.sample_id = '06-02_PG0001697-BLD' THEN 'M'\n",
       "                WHEN nbs.sample_id = '06-03_PG0001698-BLD' THEN 'F'\n",
       "                WHEN nbs.sample_id = '06-01_PG0001696-BLD' THEN 'NB'\n",
+      "                WHEN nbs.sample_id = '07-05_PG0002918-DNA' THEN 'NB'\n",
+      "                WHEN nbs.sample_id = '04-01_PG0001691-BLD' THEN 'NB'\n",
+      "                WHEN nbs.sample_id = '08-01_PG0001705-BLD' THEN 'NB'\n",
       "                END as member,\n",
       "             CASE\n",
       "                WHEN (db.sift_pred LIKE '%D%' or db.polyphen2_hdiv_pred LIKE '%D%' or db.mutation_taster_pred LIKE '%D%'\n",
       "                     or db.mutation_assessor_pred LIKE '%H%' or db.fathmm_pred LIKE '%D%' or db.provean_pred LIKE '%D%') THEN 'Y'\n",
       "                ELSE 'N'\n",
       "                END as dbnfsp_predicted,\n",
-      "            SUBSTRING(nbs.sample_id, 1,2) as family_id,\n",
       "            CONCAT(nbs.chrom, ':', CAST(nbs.pos AS STRING), ':', nbs.ref, ':', nbs.alt) as var_id \n",
       "        FROM nbs, {} db\n",
       "            WHERE nbs.chrom = db.chrom\n",
       "            AND nbs.pos = db.pos\n",
       "            AND nbs.alt = db.alt\n",
-      "            '''.format(out_db, out_db, clinvar_table, dbnfsp_table)\n",
+      "            '''.format(out_db, out_name, out_db, out_name, clinvar_table, dbnfsp_table)\n",
       "\n",
       "# run dbNFSP query on impala\n",
-      "run_query(dbnsfp_query, 'nbs_annotated')"
+      "run_query(dbnsfp_query, 'annotated')"
      ],
      "language": "python",
-     "prompt_number": 87
+     "prompt_number": 73
     },
     {
      "cell_type": "heading",
@@ -423,7 +446,7 @@
       "cur.close()"
      ],
      "language": "python",
-     "prompt_number": 88
+     "prompt_number": 74
     },
     {
      "cell_type": "code",
@@ -445,7 +468,7 @@
       "    print \"No variants located in NBS regions.\""
      ],
      "language": "python",
-     "prompt_number": 89
+     "prompt_number": 75
     },
     {
      "cell_type": "heading",
